[package]
name = "letterman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = { version = "4.5.1"}
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.30"
r2d2 = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rs-snowflake = "0.6.0"
lazy_static = "1.4.0"
